--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,21 @@
 
     <groupId>katalin</groupId>
     <artifactId>katalin-parent</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
+    <modules>
+        <module>CamelRouteFile</module>
+    </modules>
+
+    //ADD CAMEL CORE
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-core</artifactId>
+            <version>2.15.6</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
