--- a/pom.xml
+++ b/pom.xml
@@ -23,14 +23,14 @@
             <version>2.15.6</version>
         </dependency>
 
-        <!--ADD JMS -->
+        <!--ADD JMS jms component-->
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-jms</artifactId>
             <version>2.15.6</version>
         </dependency>
 
-        <!--ACTIVEMQ-->
+        <!--ACTIVEMQ    connection factory-->
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-all</artifactId>
