Create modules: PersonInfo1 and PersonInfo2 Create personInfo1.xsd and personInfo2.xsd Add changes to pom.xml s. Mvn clean install --> META-INF and personinfo1 ( and 2 ) packages will be created with ObjectFactory and Person1 ( and 2 ) java classes.

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
 
     <modules>
         <module>CamelRoutes</module>
+        <module>PersonInfo1</module>
+        <module>PersonInfo2</module>
     </modules>
 
 
