--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>CamelRoutes</module>
         <module>PersonInfo1</module>
         <module>PersonInfo2</module>
+        <module>TransformXmlToXml</module>
     </modules>
 
 
@@ -51,6 +52,20 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-blueprint</artifactId>
+            <version>2.18.0</version>
+        </dependency>
+
+        <!--JAXB2 MAVEN PLUGIN-->
+        <dependency>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>jaxb2-maven-plugin</artifactId>
+            <version>2.3</version>
+        </dependency>
+
+        <!--CAMEL JAXB-->
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-jaxb</artifactId>
             <version>2.18.0</version>
         </dependency>
 
