--- a/PersonInfo2/pom.xml
+++ b/PersonInfo2/pom.xml
@@ -23,6 +23,12 @@
             <version>2.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-jaxb</artifactId>
+            <version>2.18.0</version>
+        </dependency>
+
     </dependencies>
 
 
