--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>PersonInfo1</module>
         <module>PersonInfo2</module>
         <module>TransformXmlToXml</module>
+        <module>RouteXmlToXml</module>
     </modules>
 
 
@@ -31,7 +32,7 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-core</artifactId>
-            <version>2.15.6</version>
+            <version>2.18.0</version>
         </dependency>
 
         <!--ADD JMS jms component-->
