--- a/PersonInfo2/pom.xml
+++ b/PersonInfo2/pom.xml
@@ -23,11 +23,11 @@
             <version>2.3</version>
         </dependency>
 
-        <dependency>
+        <!-- <dependency>  KELL IDE?
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-jaxb</artifactId>
             <version>2.18.0</version>
-        </dependency>
+        </dependency>   -->
 
     </dependencies>
 
