NOT WORKING!! Error executing command: Error installing bundles:         Unable to start bundle file:C:/Users/Katika/.m2/repository/katalin/transformation-xml-to-xml/1.0-SNAPSHOT/transformation-xml-to-xml-1.0-SNAPSHOT.jar: Unresolved  constraint in bundle katalin-camel-route [264]: Unable to resolve 264.0: missing requirement [264.0] osgi.wiring.package; (&(osgi.wiring.package=org.apache.camel)(vers ion>=2.16.0)(!(version>=3.0.0))) JBossFuse:karaf@root>

--- a/CamelRoutes/pom.xml
+++ b/CamelRoutes/pom.xml
@@ -64,14 +64,14 @@
             </plugin>
 
             <!-- to run the example using mvn camel:run -->
-            <plugin>
+            <!--<plugin>
                 <groupId>org.apache.camel</groupId>
                 <artifactId>camel-maven-plugin</artifactId>
                 <version>2.15.1.redhat-620133</version>
                 <configuration>
                     <useBlueprint>true</useBlueprint>
                 </configuration>
-            </plugin>
+            </plugin> -->
 
         </plugins>
     </build>
