--- a/TransformationXmlToXml/pom.xml
+++ b/TransformationXmlToXml/pom.xml
@@ -28,6 +28,14 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.camel/camel-maven-plugin -->
+        <!-- <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-maven-plugin</artifactId>
+            <version>2.18.2</version>
+        </dependency> -->
+
+
     </dependencies>
 
 
@@ -80,10 +88,12 @@
             </plugin>
 
             <!-- to run the example using mvn camel:run -->
+
             <plugin>
                 <groupId>org.apache.camel</groupId>
                 <artifactId>camel-maven-plugin</artifactId>
-                <version>2.15.1.redhat-620133</version>
+                <version>2.16.0</version>
+                <!-- <version>2.15.1.redhat-620133</version> -->
                 <configuration>
                     <useBlueprint>true</useBlueprint>
                 </configuration>
