--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <dependency.activemq.version>5.11.0.redhat-621084</dependency.activemq.version>
+        <dependency.activemq.version>5.11.2</dependency.activemq.version>
     </properties>
 
 
@@ -33,14 +33,14 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-core</artifactId>
-            <version>2.18.0</version>
+            <version>2.16.0</version>
         </dependency>
 
         <!--ADD JMS jms component-->
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-jms</artifactId>
-            <version>2.15.6</version>
+            <version>2.16.0</version>
         </dependency>
 
         <!--ACTIVEMQ    connection factory-->
@@ -54,15 +54,30 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-blueprint</artifactId>
-            <version>2.18.0</version>
+            <version>2.16.0</version>
         </dependency>
 
         <!--CAMEL JAXB-->
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-jaxb</artifactId>
-            <version>2.18.0</version>
+            <version>2.16.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.camel/camel-maven-plugin -->
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-maven-plugin</artifactId>
+            <version>2.16.0</version>
+        </dependency>
+
+        <!--    NEW      -->
+        <!--<dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <version>1.0-SP4</version>
+        </dependency>  -->
+
 
 
     </dependencies>
