--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,8 @@
 
     <dependencies>
 
-        <!--ADD CAMEL CORE -->
+        <!--ADD CAMEL CORE
+        https://access.redhat.com/articles/310603  Jboss fuse 6.2 only works with camel 2.15.1 -->
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-core</artifactId>
@@ -65,11 +66,7 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.camel/camel-maven-plugin -->
-        <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-maven-plugin</artifactId>
-            <version>2.15.1</version>
-        </dependency>
+
 
         <!--    NEW      -->
         <!--<dependency>
